Run script tests automatically with TestNG Factory